# rpn-calc

./: README.md  rpn-calc.cabal
.github/workflows/: haskell.yml
app/: Main.hs
src/: Calc.hs
src/Calc/: Internal.hs
test/: RpnSpec.hs
