cabal-version:      2.4
name:               rpn-calc
version:            0.1.0.0

author:             Wiktor Czyż
maintainer:         czyz.wiktor@gmail.com

executable rpn-calc
  main-is:          Main.hs

  build-depends:
    base ^>=4.16.3.0
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:
    -Wall
