cabal-version:      2.4
name:               rpn-calc
version:            0.1.0.0

author:             Wiktor Czyż
maintainer:         czyz.wiktor@gmail.com

common common-settings
  default-language: Haskell2010
  ghc-options:
    -Wall

test-suite rpn-calc-test
  import: common-settings
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs

  other-modules:
      RpnSpec
  build-depends:
      base
    , hspec
    , hspec-discover
    , rpn-calc
  ghc-options:
    -O -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:
    hspec-discover:hspec-discover

library
  import: common-settings
  hs-source-dirs: src
  build-depends:
      base
    , transformers
  exposed-modules:
    Calc
      Calc.Internal

executable rpn-calc
  import: common-settings
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
      base
    , rpn-calc
  ghc-options:
    -O
